Version 0.26.0 (2022-01-22)
- Make whitelist for parameter depend on the device_type/sub_type
- Add additional params for HM-SEC-WIN

Version 0.25.0 (2022-01-19)
- Remove SpecialEvents
- Make UNREACH, STICKY_UNREACH, CONFIG_PENDING generic entities
- init UNREACH ... on init
- only poll sysvars when central is available

Version 0.24.4 (2022-01-18)
- Improve logging
- Generic schema for entities is name(str):channel(int), everthing else is custom.

- Fix sysvar unique_id
- Slugify sysvar name
- Kill executor on shutdown
- Catch ValueError on conversion
- Add more data to logging

Version 0.24.0-0.24.2 (2022-01-17)
- Improve exception handling

Version 0.23.3 (2022-01-16)
- Update fix_rssi according to doc

Version 0.23.1 (2022-01-16)
- Add more logging to reconnect
- Add doc link for RSSI fix

Version 0.23.0 (2022-01-16)
- Make ["DRY", "RAIN"] sensor a binary_sensor
- Add converter to sensor value
    - HmIP-SCTH230 CONCENTRATION to int
    - Fix RSSI
- raise connection_checker interval to 60s
- Add sleep interval(120s) to wait with reconnect after successful connection check

Version 0.22.2 (2022-01-15)
- Rename hub extra_state_attributes to attributes

Version 0.22.1 (2022-01-15)
- Add VALVE_STATE for hm climate
- Add entity_type to attributes
- Accept LOWBAT only on channel 0

Version 0.22.0 (2022-01-14)
- Move client management to central
- Add rooms
- Move calls to create_devices and start_connection_checker

Version 0.21.2 (2022-01-13)
- Add ERROR_LOCK form HmIP-DLD
- Remove ALARM_EVENTS

Version 0.21.1 (2022-01-13)
- Fix event identification and generation

Version 0.21.0 (2022-01-13)
- Remove typecast for text, binary_sensor and number
- Don't exclude Servicemeldungen from sysvars
- Use Servicemeldungen sysvar for hub state
- Add test for HM-CC-VG-1 (HM-Heatinggroup)
- Remove additional typecasts for number

Version 0.20.0 (2022-01-12)
- Add converter to BaseParameterEntity/GenericEntity
- Fix number entities returning None when 0
